<!--
  ~ Copyright (C) 2014 Arnav Gupta, AOKP
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/title_haptic"
        android:dependency="vibrator_tuning">
        <com.cyanogenmod.settings.device.prefs.VibratorTuningPreference
            android:key="vibrator_tuning"
            android:title="@string/vibrator_tuning_title"
            android:dialogTitle="@string/vibrator_tuning_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_touchscreen">
        <com.cyanogenmod.settings.device.prefs.PenModePreference
            android:key="penmode"
            android:summary="@string/penmode_summary"
            android:title="@string/penmode_title" />
        <com.cyanogenmod.settings.device.prefs.KnockOnPreference
            android:key="knock_on"
            android:title="@string/knock_on_title"
            android:summary="@string/knock_on_summary"/>
    </PreferenceCategory>


</PreferenceScreen>
